# salamander

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  plugin_browser.c  plugin_browser.h  salamander_theme.h  ssh_manager.c  ssh_manager.h
